Fix piecemeal errors, warnings and checks from R CMD check, BiocCheck::BiocCheck and BiocCheck::BiocCheckGitClone
Many small changes to non-code files regarding author information, 
version. Some changes to namespace using @import and @importFrom roxygen 
tags. Some small code changes: using TRUE/FALSE instead of T/F and using 
vapply instead of sapply.

--- a/vignettes/Introduction.rmd
+++ b/vignettes/Introduction.rmd
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(
 
 From the perspective of metabolites as the continuation of the central dogma of biology, metabolomics provides the closest link to many phenotypes of interest. This makes metabolomics research promising in teasing apart the complexities of living systems. However, due to experimental reasons, the data includes non-biological variation which limits quality and reproducibility, especially if the data is obtained from several batches. 
 
-The batchCorr package reduces unwanted variation by way of between-batch alignment, within-batch drift correction and between-batch normalization.  Please see the associated article [@brunius2016large] for more thorough descriptions of algorithms.
+The batchCorr package reduces unwanted variation by way of between-batch alignment, within-batch drift correction and between-batch normalization using batch-specific quality control samples and long-term reference QC samples. Please see the associated article [@brunius2016large] for more thorough descriptions of algorithms.
 
 # Installation
 
