--- a/Notes/Leftovers/Introduction_presentation.rmd
+++ b/Notes/Leftovers/Introduction_presentation.rmd
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(
 
 # Motivation
 
-From the perspective of metabolites as the continuation of the central dogma of biology, metabolomics provides the closest link to many phenotypes of interest. This makes untargeted LC-MS metabolomics data promising in teasing apart the complexities of living systems. However, due to experimental reasons, the data includes non-wanted variation which limits quality and reproducibility, especially if the data is obtained from several batches. 
+From the perspective of metabolites as the continuation of the central dogma of biology, metabolomics provides the closest link to many phenotypes of interest. This makes metabolomics research promising in teasing apart the complexities of living systems. However, due to experimental reasons, the data includes non-biological variation which limits quality and reproducibility, especially if the data is obtained from several batches. 
 
 The batchCorr package reduces unwanted variation by way of between-batch alignment, within-batch drift correction and between-batch normalization using batch-specific quality control (QC) samples and long-term reference QC samples. Please see the associated article [@brunius2016large] for more thorough descriptions of algorithms.
 
@@ -39,7 +39,7 @@ BiocManager::install("batchCorr")
 
 # Data
 
-The example data allows for demonstration of all core ```batchCorr``` functionality: between-batch alignment, within-batch drift correction and between-batch normalization. The example data consisting of three batches from a single analytical mode consists of three objects: PTnofill (non-imputed/filled abundances, matrix), PTfilled (imputed/filled abundances) and meta (sample and feature metadata, data.frame). 
+The example data allows for demonstration of all core ```batchCorr``` functionality: between-batch alignment, within-batch drift correction and between-batch normalization. The example data from a single analytical mode consists of two objects: B_PT (abundances, matrix) and B_meta (sample and feature metadata, data.frame). 
 
 ```{r}
 library(batchCorr)
@@ -51,8 +51,7 @@ data("ThreeBatchData")
 ```batchCorr``` is designed to work with basic data classes. Adundances are included in a matrix, while sample and feature metadata is included in a data.frame. ```batchCorr``` works best as per the chronology presented below. Other functions include:
 
 - ```peakInfo``` to extract m/z and rt from peak table
-- ```getBatch``` to extract specific batch from peak table and metadata
-- ```mergeBatches``` to merge batches after drift correction
+- ```mergeBatches``` for merging batches after drift correction
 
 Important analytical background includes batch-specific QC samples and long-term reference QC samples, which are regularly interspersed in the injection sequence. Batch-specific QC samples are typically pooled aliquots of study samples, and are used for within-batch drift correction. Long-term reference QC samples are not of the same biological origin as the batch-specific QC samples, and are therefore not directly representative of the sample population. Long-term reference QC samples are used for between-batch alignment, within-batch drift correction and between-batch normalization.
 
@@ -60,21 +59,21 @@ Important analytical background includes batch-specific QC samples and long-term
 
 Shifts in retention time (RT) and mass-to-charge ratio (m/z) across batches results in some metabolites being redundantly represented in the dataset. To rectify this, between-batch alignment of features is performed using ```alignBatches```, which encompasses the following steps:
 
-1. Aggregation of feature presence/missingness on batch level
+1. Aggregation of feature presence/missingness on batch level (```batchFlag```)
 - batch-wise flagging of low-quality features with proportion of ```NA```s to all samples > 80% based on long-term reference QC samples
 - 0 < total batch presence of candidates features < number of batches to be an alignment candidate
-
-2. Identification of features with missingness within "the box", i.e. sufficiently similar in RT and m/z
+2. Identification of features with missingness within "the box", i.e. sufficiently similar in RT and m/z (```alignIndex```) 
 - potential alignment candidates have similar RT and m/z across batches
 - orthogonal batch presence: two or more alignment candidates cannot be present in the same batch
 - if there are multiple combinations of candidates across batches, the features are recursively subclustered before clustering across batches
 - saves plots for inspecting results of subclustering
 
-3. Plotting clusters of alignment candidates 
+3. Plotting clusters of alignment candidates (```plotAlign```)
 
-4. Aligning of feature clusters resulting in new peak table
+4. Aligning of feature clusters resulting in new peak table  (```batchAlign```)
 
 ```{r}
+## Perform batch alignment
 # Extract peakinfo (i.e. m/z and rt of features), 
 # These column names have 2 leading characters describing LC-MS mode 
 # -> start at 3
@@ -90,20 +89,20 @@ PT=alignBat$PTalign
 ## Within-batch drift correction
 Drift in abundance within a batch gives rise to unwanted variation which can be modelled in terms of injection order. Many methods fail to take into account different drift patterns in features or are prone to overfitting. Herein, within-batch drift correction is performed using the wrapper ```correctDrift```, which involves:
 
-1. Clustering of features
+1. Clustering of features (```clust```)
 - scaling by standard deviation
 - clustering serves to identify features with similar drift patterns, which are corrected in aggregate. As such, different drift patterns are accounted for while mitigating overfitting to unwanted variation in a single feature. 
 - different cluster model types (```groupNames```) and numbers of clusters (```G```) can be tested 
 
-2. Calculation of correction factor
+2. Calculation of correction factor (```dritCalc```)
 - ```driftCalc```accepts arguments specifying the smoothing function (LOESS or cubic spline)
 
-3. Correction of the abundances using correction factor
+3. Correction of the abundances using correction factor (```driftCorr```)
 - corrects to reference level at the first injection after scaling
 - plots the feature clusters against injection order before and after drift correction
 - corrected values were retained only if the root mean square deviation of long-term reference QC samples was reduced after drift correction for the cluster at large
 
-4. Removal of individual features
+4. Removal of individual features (```cleanVar```)
 - features were removed batch-wise if the CV of within-batch QC samples after drift correction > 30%
 
 
@@ -143,9 +142,6 @@ HCorr <- correctDrift(peakTable = batchH$peakTable,
 If the long-term QC samples are not considered reliable according to the above dual criterion for a specific feature, batches were normalised by sample population median, where a sample population can be specified explicitly to the ```population``` argument. Features not present in all batches are also excluded from the dataset.
 
 ```{r, warning = FALSE}
-# Merging includes a quality control step, where features with QC CV < the
-# limit (supplied to CorrectDrift) in a specified proportion of batches
-# (default = 0.5) are excluded
 mergedData <- mergeBatches(list(BCorr,FCorr,HCorr))
 normData <- normalizeBatches(peakTableCorr = mergedData$peakTableCorr, 
                              batches = meta$batch, sampleGroup = meta$grp,
